--- a/kde-base/kwallet/ChangeLog
+++ b/kde-base/kwallet/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kwallet
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kwallet/ChangeLog,v 1.8 2008/05/16 00:39:15 ingmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kwallet/ChangeLog,v 1.9 2008/06/05 22:32:31 keytoaster Exp $
+
+*kwallet-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kwallet-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kwallet.
 
 *kwallet-4.0.4 (15 May 2008)
 
