--- a/kde-base/kweather/ChangeLog
+++ b/kde-base/kweather/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kweather
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kweather/ChangeLog,v 1.94 2008/05/18 16:08:52 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kweather/ChangeLog,v 1.95 2008/06/05 22:33:04 keytoaster Exp $
+
+*kweather-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kweather-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kweather.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kweather-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
