--- a/kde-base/kworldclock/ChangeLog
+++ b/kde-base/kworldclock/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kworldclock
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kworldclock/ChangeLog,v 1.21 2008/05/18 15:04:24 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kworldclock/ChangeLog,v 1.22 2008/06/05 22:34:50 keytoaster Exp $
+
+*kworldclock-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kworldclock-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kworldclock.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kworldclock-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
