--- a/kde-base/libkscan/ChangeLog
+++ b/kde-base/libkscan/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/libkscan
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkscan/ChangeLog,v 1.89 2008/05/18 21:49:28 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkscan/ChangeLog,v 1.90 2008/06/05 22:39:03 keytoaster Exp $
+
+*libkscan-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +libkscan-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of libkscan.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> libkscan-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
