--- a/kde-base/libplasma/ChangeLog
+++ b/kde-base/libplasma/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/libplasma
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libplasma/ChangeLog,v 1.8 2008/05/30 09:12:50 zlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libplasma/ChangeLog,v 1.9 2008/06/05 22:40:00 keytoaster Exp $
+
+*libplasma-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +libplasma-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of libplasma.
 
   30 May 2008; Bo Ørsted Andresen <zlin@gentoo.org> libplasma-4.0.4.ebuild:
   KDE4_BUILT_WITH_USE_CHECK is now always an array. Bug #216863.
