--- a/kde-base/lilo-config/ChangeLog
+++ b/kde-base/lilo-config/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/lilo-config
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/lilo-config/ChangeLog,v 1.57 2008/05/18 18:20:28 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/lilo-config/ChangeLog,v 1.58 2008/06/05 22:40:59 keytoaster Exp $
+
+*lilo-config-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +lilo-config-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of lilo-config.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> lilo-config-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
