--- a/kde-base/phonon/ChangeLog
+++ b/kde-base/phonon/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/phonon
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/phonon/ChangeLog,v 1.8 2008/05/30 08:36:43 zlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/phonon/ChangeLog,v 1.9 2008/06/05 22:44:10 keytoaster Exp $
+
+*phonon-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> +phonon-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of phonon.
 
   30 May 2008; Bo Ørsted Andresen <zlin@gentoo.org> phonon-4.0.4.ebuild:
   KDE4_BUILT_WITH_USE_CHECK is now always an array. Bug #216863.
