--- a/kde-base/secpolicy/ChangeLog
+++ b/kde-base/secpolicy/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/secpolicy
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/secpolicy/ChangeLog,v 1.69 2008/05/18 18:15:21 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/secpolicy/ChangeLog,v 1.70 2008/06/05 22:45:12 keytoaster Exp $
+
+*secpolicy-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +secpolicy-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of secpolicy.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> secpolicy-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
