--- a/kde-base/solid/ChangeLog
+++ b/kde-base/solid/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/solid
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/solid/ChangeLog,v 1.7 2008/05/16 00:56:30 ingmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/solid/ChangeLog,v 1.8 2008/06/05 22:45:40 keytoaster Exp $
+
+*solid-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> +solid-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of solid.
 
 *solid-4.0.4 (15 May 2008)
 
