--- a/kde-base/soliduiserver/ChangeLog
+++ b/kde-base/soliduiserver/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/soliduiserver
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/soliduiserver/ChangeLog,v 1.7 2008/05/16 00:57:05 ingmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/soliduiserver/ChangeLog,v 1.8 2008/06/05 22:46:08 keytoaster Exp $
+
+*soliduiserver-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +soliduiserver-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of soliduiserver.
 
 *soliduiserver-4.0.4 (15 May 2008)
 
