--- a/kde-base/strigi-analyzer/ChangeLog
+++ b/kde-base/strigi-analyzer/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/strigi-analyzer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/strigi-analyzer/ChangeLog,v 1.8 2008/05/16 00:57:39 ingmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/strigi-analyzer/ChangeLog,v 1.9 2008/06/05 22:46:36 keytoaster Exp $
+
+*strigi-analyzer-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +strigi-analyzer-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of strigi-analyzer.
 
 *strigi-analyzer-4.0.4 (15 May 2008)
 
