--- a/kde-base/kitchensync/ChangeLog
+++ b/kde-base/kitchensync/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for kde-base/kitchensync
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kitchensync/ChangeLog,v 1.91 2008/05/18 22:05:49 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kitchensync/ChangeLog,v 1.92 2008/06/05 23:31:36 loki_val Exp $
+
+*kitchensync-3.5.9-r1 (05 Jun 2008)
+
+  05 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
+  +files/kitchensync-3.5.9-OpenSync0.30API.patch,
+  +kitchensync-3.5.9-r1.ebuild:
+  Adding libopensync >=0.36 compatible version to tree per IRC convo with
+  zlin. Bug 202974.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kitchensync-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
