--- a/net-zope/plone/ChangeLog
+++ b/net-zope/plone/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-zope/plone
 # Copyright 2003-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/plone/ChangeLog,v 1.49 2008/06/05 18:03:00 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/plone/ChangeLog,v 1.50 2008/06/06 07:39:37 opfer Exp $
+
+  06 Jun 2008; Christian Faulhammer <opfer@gentoo.org> plone-2.5.5.ebuild:
+  stable x86, bug 224735
 
   05 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> plone-2.5.5.ebuild:
   stable on sparc, bug 224735
