--- a/profiles/default-linux/hppa/ChangeLog
+++ b/profiles/default-linux/hppa/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for hppa profile
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/hppa/ChangeLog,v 1.39 2008/05/27 03:02:01 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/hppa/ChangeLog,v 1.40 2008/06/06 15:33:07 jer Exp $
+
+  06 Jun 2008; Jeroen Roovers <jer@gentoo.org> use.mask:
+  Mask valgrind USE flag (as used by dev-util/anjuta).
 
   27 May 2008; Jeroen Roovers <jer@gentoo.org> use.mask:
   Mask tracker USE flag (bug #218794).
