--- a/dev-libs/gnome-build/ChangeLog
+++ b/dev-libs/gnome-build/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/gnome-build
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gnome-build/ChangeLog,v 1.13 2008/06/05 21:27:30 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gnome-build/ChangeLog,v 1.14 2008/06/06 15:42:20 jer Exp $
+
+  06 Jun 2008; Jeroen Roovers <jer@gentoo.org> gnome-build-0.3.0.ebuild:
+  Marked ~hppa (dev-util/anjuta).
 
 *gnome-build-0.3.0 (05 Jun 2008)
 
