--- a/media-fonts/freefont-ttf/ChangeLog
+++ b/media-fonts/freefont-ttf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/freefont-ttf
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/freefont-ttf/ChangeLog,v 1.6 2008/03/25 02:29:31 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/freefont-ttf/ChangeLog,v 1.7 2008/06/06 19:38:59 fmccor Exp $
+
+  06 Jun 2008; Ferris McCormick <fmccor@gentoo.org>
+  freefont-ttf-20080323.ebuild:
+  Sparc stable, bug #224869.
 
 *freefont-ttf-20080323 (25 Mar 2008)
 
