--- a/x11-apps/xfs/ChangeLog
+++ b/x11-apps/xfs/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/xfs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfs/ChangeLog,v 1.52 2008/04/17 04:23:44 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfs/ChangeLog,v 1.53 2008/06/06 21:31:51 dberkholz Exp $
+
+*xfs-1.0.8 (06 Jun 2008)
+
+  06 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>; +xfs-1.0.8.ebuild:
+  Bump.
 
   17 Apr 2008; Mike Frysinger <vapier@gentoo.org> files/xfs.start:
   Dont loop forever trying to create /tmp/.font-unix. If it fails sanity, then
