--- a/x11-apps/xfsinfo/ChangeLog
+++ b/x11-apps/xfsinfo/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/xfsinfo
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfsinfo/ChangeLog,v 1.14 2007/12/20 00:12:06 cla Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfsinfo/ChangeLog,v 1.15 2008/06/06 21:32:19 dberkholz Exp $
+
+*xfsinfo-1.0.2 (06 Jun 2008)
+
+  06 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +xfsinfo-1.0.2.ebuild:
+  Bump.
 
   19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xfsinfo-1.0.1.ebuild:
   Stable on x86 (bug #202087)
