--- a/x11-drivers/xf86-input-elo2300/ChangeLog
+++ b/x11-drivers/xf86-input-elo2300/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for x11-drivers/xf86-input-elo2300
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-elo2300/ChangeLog,v 1.31 2008/02/24 02:15:46 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-elo2300/ChangeLog,v 1.32 2008/06/06 21:49:52 dberkholz Exp $
+
+*xf86-input-elo2300-1.1.2 (06 Jun 2008)
+
+  06 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +files/0001-Check-for-XINPUT-ABI-3.patch,
+  +xf86-input-elo2300-1.1.2.ebuild:
+  Bump. Mostly minor fixes.
 
   24 Feb 2008; Donnie Berkholz <dberkholz@gentoo.org>; ChangeLog:
   Update my email.
