--- a/app-admin/zprod-manager/ChangeLog
+++ b/app-admin/zprod-manager/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/zprod-manager
 # Copyright 2003-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/zprod-manager/ChangeLog,v 1.22 2008/05/24 20:46:26 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/zprod-manager/ChangeLog,v 1.23 2008/06/06 23:28:58 tupone Exp $
+
+  06 Jun 2008; Tupone Alfredo <tupone@gentoo.org> zprod-manager-0.3.ebuild:
+  Stable on amd64
 
 *zprod-manager-0.3.2-r1 (24 May 2008)
 
