--- a/net-zope/plone/ChangeLog
+++ b/net-zope/plone/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-zope/plone
 # Copyright 2003-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/plone/ChangeLog,v 1.50 2008/06/06 07:39:37 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/plone/ChangeLog,v 1.51 2008/06/06 23:42:16 tupone Exp $
+
+  06 Jun 2008; Tupone Alfredo <tupone@gentoo.org> plone-2.5.5.ebuild:
+  stable on amd64, bug #224735
 
   06 Jun 2008; Christian Faulhammer <opfer@gentoo.org> plone-2.5.5.ebuild:
   stable x86, bug 224735
