--- a/media-libs/openinventor/ChangeLog
+++ b/media-libs/openinventor/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/openinventor
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openinventor/ChangeLog,v 1.16 2008/05/23 16:32:55 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openinventor/ChangeLog,v 1.17 2008/06/07 08:57:45 bicatali Exp $
+
+  07 Jun 2008; Sébastien Fabbro <bicatali@gentoo.org>
+  files/gcc4-support.patch, openinventor-2.1.5.10-r2.ebuild:
+  Added a few trivial fixes for gcc-4.3 in gcc4-support.patch, and filter
+  optimizations >=O2 because of segmentation faults
 
   23 May 2008; Markus Meier <maekke@gentoo.org>
   openinventor-2.1.5.10-r2.ebuild:
