--- a/media-fonts/freefont-ttf/ChangeLog
+++ b/media-fonts/freefont-ttf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/freefont-ttf
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/freefont-ttf/ChangeLog,v 1.7 2008/06/06 19:38:59 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/freefont-ttf/ChangeLog,v 1.8 2008/06/07 10:12:33 armin76 Exp $
+
+  07 Jun 2008; Raúl Porcel <armin76@gentoo.org>
+  freefont-ttf-20080323.ebuild:
+  alpha/ia64/x86 stable wrt #224869
 
   06 Jun 2008; Ferris McCormick <fmccor@gentoo.org>
   freefont-ttf-20080323.ebuild:
