--- a/kde-base/kde/ChangeLog
+++ b/kde-base/kde/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kde
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde/ChangeLog,v 1.204 2008/05/18 21:47:04 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde/ChangeLog,v 1.205 2008/06/07 10:39:32 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kde-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kde-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
