--- a/kde-base/kpf/ChangeLog
+++ b/kde-base/kpf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kpf
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kpf/ChangeLog,v 1.82 2008/05/18 16:36:49 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kpf/ChangeLog,v 1.83 2008/06/07 10:45:46 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kpf-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kpf-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
