--- a/kde-base/kdat/ChangeLog
+++ b/kde-base/kdat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdat
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdat/ChangeLog,v 1.71 2008/05/19 23:26:53 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdat/ChangeLog,v 1.72 2008/06/07 10:51:46 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kdat-3.5.8.ebuild:
+  Removed old versions.
 
   19 May 2008; Carsten Lohrke <carlo@gentoo.org> kdat-3.5.9.ebuild:
   Stable on amd64 and x86.
