--- a/kde-base/kfax/ChangeLog
+++ b/kde-base/kfax/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kfax
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kfax/ChangeLog,v 1.88 2008/05/18 21:34:54 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kfax/ChangeLog,v 1.89 2008/06/07 10:53:29 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kfax-3.5.8.ebuild,
+  -kfax-4.0.3.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kfax-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
