--- a/kde-base/kode/ChangeLog
+++ b/kde-base/kode/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kode
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kode/ChangeLog,v 1.74 2008/05/18 15:07:20 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kode/ChangeLog,v 1.75 2008/06/07 10:58:29 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kode-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kode-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
