--- a/kde-base/korn/ChangeLog
+++ b/kde-base/korn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/korn
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/korn/ChangeLog,v 1.92 2008/05/18 21:02:25 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/korn/ChangeLog,v 1.93 2008/06/07 11:02:42 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -korn-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> korn-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
