--- a/kde-base/ksim/ChangeLog
+++ b/kde-base/ksim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/ksim
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/ksim/ChangeLog,v 1.94 2008/05/18 15:50:38 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/ksim/ChangeLog,v 1.95 2008/06/07 11:08:39 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -ksim-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> ksim-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
