--- a/kde-base/ktip/ChangeLog
+++ b/kde-base/ktip/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/ktip
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/ktip/ChangeLog,v 1.94 2008/06/05 22:26:38 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/ktip/ChangeLog,v 1.95 2008/06/07 11:10:18 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -ktip-3.5.8.ebuild,
+  -ktip-4.0.2.ebuild, -ktip-4.0.3.ebuild:
+  Removed old versions.
 
 *ktip-4.0.5 (05 Jun 2008)
 
