--- a/kde-base/ksvg/ChangeLog
+++ b/kde-base/ksvg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/ksvg
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/ksvg/ChangeLog,v 1.86 2008/05/18 16:50:33 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/ksvg/ChangeLog,v 1.87 2008/06/07 11:11:09 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -ksvg-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> ksvg-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
