--- a/kde-base/lisa/ChangeLog
+++ b/kde-base/lisa/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/lisa
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/lisa/ChangeLog,v 1.90 2008/05/18 16:23:23 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/lisa/ChangeLog,v 1.91 2008/06/07 11:11:59 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -lisa-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> lisa-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
