--- a/kde-base/kxkb/ChangeLog
+++ b/kde-base/kxkb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kxkb
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kxkb/ChangeLog,v 1.103 2008/05/18 17:28:22 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kxkb/ChangeLog,v 1.104 2008/06/07 11:14:36 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -kxkb-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kxkb-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
