--- a/kde-base/renamedlg-audio/ChangeLog
+++ b/kde-base/renamedlg-audio/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/renamedlg-audio
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/renamedlg-audio/ChangeLog,v 1.76 2008/05/18 18:23:09 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/renamedlg-audio/ChangeLog,v 1.77 2008/06/07 11:18:03 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -renamedlg-audio-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   renamedlg-audio-3.5.9.ebuild:
