--- a/kde-base/dcoprss/ChangeLog
+++ b/kde-base/dcoprss/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/dcoprss
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/dcoprss/ChangeLog,v 1.87 2008/05/18 19:42:01 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/dcoprss/ChangeLog,v 1.88 2008/06/07 11:21:30 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -dcoprss-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> dcoprss-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
