--- a/kde-base/artsplugin-mpeglib/ChangeLog
+++ b/kde-base/artsplugin-mpeglib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/artsplugin-mpeglib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpeglib/ChangeLog,v 1.77 2008/05/16 06:50:44 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpeglib/ChangeLog,v 1.78 2008/06/07 11:23:09 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -artsplugin-mpeglib-3.5.8.ebuild:
+  Removed old versions.
 
   16 May 2008; Markus Rothe <corsair@gentoo.org>
   artsplugin-mpeglib-3.5.9.ebuild:
