--- a/kde-base/kdeartwork-icewm-themes/ChangeLog
+++ b/kde-base/kdeartwork-icewm-themes/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeartwork-icewm-themes
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-icewm-themes/ChangeLog,v 1.79 2008/06/05 21:22:36 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-icewm-themes/ChangeLog,v 1.80 2008/06/07 11:24:02 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdeartwork-icewm-themes-3.5.8.ebuild,
+  -kdeartwork-icewm-themes-4.0.2.ebuild,
+  -kdeartwork-icewm-themes-4.0.3.ebuild:
+  Removed old versions.
 
 *kdeartwork-icewm-themes-4.0.5 (05 Jun 2008)
 
