--- a/kde-base/kdejava/ChangeLog
+++ b/kde-base/kdejava/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdejava
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdejava/ChangeLog,v 1.73 2008/05/18 21:57:33 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdejava/ChangeLog,v 1.74 2008/06/07 11:27:56 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdejava-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdejava-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
