--- a/kde-base/kdetoys/ChangeLog
+++ b/kde-base/kdetoys/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdetoys
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdetoys/ChangeLog,v 1.202 2008/05/18 21:29:14 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdetoys/ChangeLog,v 1.203 2008/06/07 11:31:43 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdetoys-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdetoys-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
