--- a/kde-base/kbattleship/ChangeLog
+++ b/kde-base/kbattleship/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kbattleship
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kbattleship/ChangeLog,v 1.92 2008/06/05 21:08:26 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kbattleship/ChangeLog,v 1.93 2008/06/07 11:33:26 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kbattleship-3.5.8.ebuild, -kbattleship-4.0.2.ebuild,
+  -kbattleship-4.0.3.ebuild:
+  Removed old versions.
 
 *kbattleship-4.0.5 (05 Jun 2008)
 
