--- a/kde-base/kdeartwork-kworldclock/ChangeLog
+++ b/kde-base/kdeartwork-kworldclock/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeartwork-kworldclock
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-kworldclock/ChangeLog,v 1.92 2008/06/05 21:24:24 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-kworldclock/ChangeLog,v 1.93 2008/06/07 11:35:09 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdeartwork-kworldclock-3.5.8.ebuild,
+  -kdeartwork-kworldclock-4.0.2.ebuild,
+  -kdeartwork-kworldclock-4.0.3.ebuild:
+  Removed old versions.
 
 *kdeartwork-kworldclock-4.0.5 (05 Jun 2008)
 
