--- a/dev-util/cvsps/ChangeLog
+++ b/dev-util/cvsps/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/cvsps
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cvsps/ChangeLog,v 1.24 2008/06/07 11:30:17 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cvsps/ChangeLog,v 1.25 2008/06/07 11:35:39 aballier Exp $
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> cvsps-2.1.ebuild:
+  keyword ~sparc-fbsd
 
   07 Jun 2008; Alexis Ballier <aballier@gentoo.org> cvsps-2.1.ebuild:
   keyword ~x86-fbsd
