--- a/kde-base/atlantikdesigner/ChangeLog
+++ b/kde-base/atlantikdesigner/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/atlantikdesigner
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/atlantikdesigner/ChangeLog,v 1.84 2008/05/18 21:23:21 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/atlantikdesigner/ChangeLog,v 1.85 2008/06/07 11:37:43 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -atlantikdesigner-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   atlantikdesigner-3.5.9.ebuild:
