--- a/kde-base/kaboodle/ChangeLog
+++ b/kde-base/kaboodle/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kaboodle
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kaboodle/ChangeLog,v 1.86 2008/05/18 20:45:50 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kaboodle/ChangeLog,v 1.87 2008/06/07 11:38:32 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kaboodle-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kaboodle-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
