--- a/kde-base/knewsticker/ChangeLog
+++ b/kde-base/knewsticker/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/knewsticker
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/knewsticker/ChangeLog,v 1.94 2008/06/05 22:04:52 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/knewsticker/ChangeLog,v 1.95 2008/06/07 11:39:22 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -knewsticker-3.5.8.ebuild, -knewsticker-4.0.2.ebuild,
+  -knewsticker-4.0.3.ebuild:
+  Removed old versions.
 
 *knewsticker-4.0.5 (05 Jun 2008)
 
