--- a/kde-base/libksieve/ChangeLog
+++ b/kde-base/libksieve/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/libksieve
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libksieve/ChangeLog,v 1.65 2008/05/18 15:10:02 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libksieve/ChangeLog,v 1.66 2008/06/07 11:41:57 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -libksieve-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> libksieve-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
