--- a/kde-base/kdewebdev/ChangeLog
+++ b/kde-base/kdewebdev/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdewebdev
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdewebdev/ChangeLog,v 1.160 2008/05/18 21:17:53 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdewebdev/ChangeLog,v 1.161 2008/06/07 11:44:27 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kdewebdev-3.5.8-r1.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdewebdev-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
