--- a/kde-base/eyesapplet/ChangeLog
+++ b/kde-base/eyesapplet/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/eyesapplet
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/eyesapplet/ChangeLog,v 1.77 2008/05/18 16:18:00 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/eyesapplet/ChangeLog,v 1.78 2008/06/07 11:46:04 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -eyesapplet-3.5.8.ebuild:
+  Removed old versions.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> eyesapplet-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
