--- a/kde-base/dcopc/ChangeLog
+++ b/kde-base/dcopc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/dcopc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/dcopc/ChangeLog,v 1.27 2008/05/19 23:31:17 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/dcopc/ChangeLog,v 1.28 2008/06/07 11:46:50 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> -dcopc-3.5.8.ebuild:
+  Removed old versions.
 
   19 May 2008; Carsten Lohrke <carlo@gentoo.org> dcopc-3.5.9.ebuild:
   Stable on amd64 and x86.
