--- a/kde-base/kpercentage/ChangeLog
+++ b/kde-base/kpercentage/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kpercentage
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kpercentage/ChangeLog,v 1.89 2008/06/05 22:11:36 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kpercentage/ChangeLog,v 1.90 2008/06/07 11:48:31 keytoaster Exp $
+
+  07 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  -kpercentage-3.5.8.ebuild, -kpercentage-4.0.2.ebuild,
+  -kpercentage-4.0.3.ebuild:
+  Removed old versions.
 
 *kpercentage-4.0.5 (05 Jun 2008)
 
